# spacy-vulns-dataset

./: .gitignore  main.py  pyproject.toml
cvebackend/: _wsgi.py  latest-model  model.py
cvebackend/1660660601/: event.json
cvebackend/1660660686/: event.json
cvebackend/1660660701/: event.json
cvebackend/1660660728/: event.json
cvebackend/1660660771/: event.json
cvebackend/1660660789/: event.json
cvebackend/1660660809/: event.json
cvebackend/1660660826/: event.json
cvebackend/1660660829/: event.json
cvebackend/1660660832/: event.json
cvebackend/1660660833/: event.json
cvebackend/1660660834/: event.json
cvebackend/1660660835/: event.json
cvebackend/1660660855/: event.json
cvebackend/1660660870/: event.json
cvebackend/1660660872/: event.json
cvebackend/1660660873/: event.json
cvebackend/1660660874/: event.json
cvebackend/1660660901/: event.json
cvebackend/1660660922/: event.json
cvebackend/1660660971/: event.json
cvebackend/1660660985/: event.json
cvebackend/1660661000/: event.json
cvebackend/1660661014/: event.json
cvebackend/1660661017/: event.json
cvebackend/1660661018/: event.json
cvebackend/1660661040/: event.json
cvebackend/1660661043/: event.json
cvebackend/1660661069/: event.json
cvebackend/1660661090/: event.json
cvebackend/1660661093/: event.json
cvebackend/1660661094/: event.json
cvebackend/1660661095/: event.json
cvebackend/1660661113/: event.json
cvebackend/1660661140/: event.json
dataset/: cves-2021-01.csv
labelstudio/: project-5-at-2022-08-16-20-16-ff906c03.json
utils/: nvd.py
(+416 files in other folders)
