[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Joey Dreijer <jdreijer@schubergphilis.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.2"
dateparser = "^1.1.1"
requests = "^2.28.1"
spacy = {extras = ["transformers", "lookups"], version = "^3.4.1"}
label-studio-ml = "^1.0.8"
redis = "^4.3.4"
rq = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
